# shihua

./: README.md
104_slave/: 104config.json5  CMakeLists.txt  README.md
104_slave/build_jsonc/: ALL_BUILD.vcxproj  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  client_worker.out  client_worker2.out  cmake_install.cmake  iec104_diag.vcxproj  iec104_diag.vcxproj.filters  iec104_slave.sln  iec104_slave.vcxproj  iec104_slave.vcxproj.filters  run.out  thread_run.out
104_slave/build_jsonc/iec104_diag.dir/Debug/: iec104_diag.exe.recipe  iec104_diag.ilk
104_slave/build_jsonc/iec104_diag.dir/Debug/iec104_diag.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
104_slave/build_jsonc/iec104_slave.dir/Debug/: iec104_slave.exe.recipe  iec104_slave.ilk
104_slave/build_jsonc/iec104_slave.dir/Debug/iec104_slave.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
104_slave/build_jsonc/json-c/: ALL_BUILD.vcxproj  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  distcheck.vcxproj  distcheck.vcxproj.filters  json-c.pc  json-c.sln  json-c.vcxproj  json-c.vcxproj.filters
104_slave/build_jsonc/json-c/Debug/: json-c.lib
104_slave/build_jsonc/json-c/doc/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters
104_slave/build_jsonc/json-c/json-c.dir/Debug/json-c.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  json-c.lastbuildstate
104_slave/build_jsonc/lib60870/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  lib60870-C.sln
104_slave/build_jsonc/lib60870/src/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  lib60870-shared.vcxproj  lib60870.vcxproj  lib60870.vcxproj.filters
104_slave/build_jsonc/lib60870/src/Debug/: lib60870.exp  lib60870.lib
104_slave/build_jsonc/lib60870/src/lib60870-shared.dir/Debug/: lib60870.dll.recipe  lib60870.ilk  objects.txt
104_slave/build_jsonc/lib60870/src/lib60870-shared.dir/Debug/lib60870-shared.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  lib60870-shared.lastbuildstate  lib60870-shared.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
104_slave/build_jsonc/lib60870/src/lib60870-shared.dir/MinSizeRel/: objects.txt
104_slave/build_jsonc/lib60870/src/lib60870-shared.dir/RelWithDebInfo/: objects.txt
104_slave/build_jsonc/lib60870/src/lib60870-shared.dir/Release/: objects.txt
104_slave/build_jsonc/lib60870/src/lib60870.dir/Debug/: lib60870.lib.recipe  version.res
104_slave/build_jsonc/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
104_slave/build_jsonc/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
104_slave/build_jsonc/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
104_slave/include/: active_upload.h  asdu_builder.h  client_context.h  command_handler.h  config.h  custom_asdu.h  diag_server.h  history_store.h  iec104_server.h  log.h  point_table.h  report_scheduler.h  shm_adapter.h  soe_history.h
104_slave/src/: active_upload.c  asdu_builder.c  client_context.c  command_handler.c  config.c  custom_asdu.c  diag_server.c  history_store.c  iec104_server.c  log.c  main.c  point_table.c  report_scheduler.c  shm_adapter.c  soe_history.c
104_slave/tools/: iec104_diag.c
mariadb-connector-c-3.4/: CMakeLists.txt
mariadb-connector-c-3.4/.github/workflows/: ci.yml
mariadb-connector-c-3.4/cmake/: FindGSSAPI.cmake  FindHogweed.cmake  FindIconv.cmake  FindNettle.cmake  WindowsCache.cmake  check_include_files.cmake  check_types.cmake  install.cmake  misc.cmake  plugins.cmake
mariadb-connector-c-3.4/include/: ma_context.h  ma_crypt.h  ma_global.h  ma_sys.h  mariadb_com.h  mariadb_rpl.h
mariadb-connector-c-3.4/include/mysql/: client_plugin.h
mariadb-connector-c-3.4/libmariadb/: CMakeLists.txt  get_password.c  ma_alloc.c  ma_charset.c  ma_client_plugin.c.in  ma_context.c  ma_decimal.c  ma_dtoa.c  ma_io.c  ma_net.c  ma_password.c  ma_pvio.c  ma_stmt_codec.c  ma_time.c  ma_tls.c  mariadb_async.c  mariadb_lib.c  mariadb_rpl.c  mariadb_stmt.c
mariadb-connector-c-3.4/libmariadb/secure/: gnutls.c  ma_schannel.c  openssl.c  schannel.c
mariadb-connector-c-3.4/plugins/: CMakeLists.txt  dynamic_plugin_exports.txt
mariadb-connector-c-3.4/plugins/auth/: CMakeLists.txt  auth_gssapi_client.c  caching_sha2_pw.c  dialog.c  ed25519.c  mariadb_cleartext.c  my_auth.c  old_password.c  parsec.c  sha256_pw.c
mariadb-connector-c-3.4/plugins/auth/ref10/: keypair.c  open.c  sign.c
mariadb-connector-c-3.4/plugins/compress/: c_zlib.c
mariadb-connector-c-3.4/plugins/connection/: replication.c
mariadb-connector-c-3.4/plugins/io/: CMakeLists.txt  remote_io.c
mariadb-connector-c-3.4/plugins/pvio/: pvio_npipe.c  pvio_shmem.c  pvio_socket.c
mariadb-connector-c-3.4/plugins/trace/: trace_example.c
mariadb-connector-c-3.4/unittest/libmariadb/: CMakeLists.txt  async.c  charset.c  connection.c  misc.c  my_test.h  ps.c  ps_bugs.c  rpl_api.c  tls.c.in
mariadb-connector-c-3.4/unittest/mytap/: tap.c
(+89 files in other folders)
